# esop

./: .env.example  .gitignore  .pre-commit-config.yaml  10-Minute_CEO_Demo_Script_ESOP_Phase1.docx  Chatgpt_ESOP_Walkthrough.html  Claude_ESOP_Walkthrough.html  DEMO CHECKLIST.HTML  DEMO_GUIDE.html  DEMO_GUIDE.md  Demo File.docx  Dockerfile  ESOP PROJECT FUNCTIONALITY.MD  FUNCTIONALITY_GUIDE.md  Phase1_Demo_Guide.docx  README.md  South_Africa_Demo_Data_Pack_ESOP_Phase1.docx  TODO.md  cgptesop_django_interactive_guide.html  conftest.py  django_security_django_guide.html  docker-compose.yml  for users only example user journeys (not for bot or ai access).docx  human_only_architecture_explanation.md  pyproject.toml  ~$mo File.docx  ~$r users only example user journeys (not for bot or ai access).docx
.claude/: settings.local.json
apps/accounts/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
apps/api/: __init__.py  apps.py  exceptions.py  permissions.py  serializers.py  urls.py  views.py
apps/audit/: admin.py  apps.py  models.py  services.py
apps/beneficiaries/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
common/: decorators.py  encryption.py  middleware.py  models.py  permissions.py  validators.py
config/: __init__.py  celery.py  urls.py
requirements/: base.txt  dev.txt
scripts/: ci.sh
templates/: base.html
tests/: test_api.py  test_auth.py  test_beneficiaries.py  test_dividends.py  test_documents.py  test_integrations.py  test_month_end.py  test_settings_security.py  test_tasks.py  test_tenant_isolation.py
(+85 files in other folders)
